# PyFastMurmurHash3

./: .gitignore  LICENSE  README.md  README_CN.md  cmmh3-0.1.0-py3-none-any.whl  main.py  pyproject.toml  setup.py
cmmh3/: cmurmur3.c  cmurmur3.pxd  cmurmur3.pyi
fmmh3/: __init__.py  fastmmh3.pxd  fastmmh3.pyx
fmmh3/includes/: murmur3.c
tests/: pymmh3.py  test_speed.py
