[tool.poetry]
name = "fmmh3"
version = "0.1.0"
description = "C implementation of MurmurHash3 for Python."
authors = ["dream2333 <vincentqng@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
Cython = "3.0.0b3"

[build-system]
requires = ["poetry-core", "cython","setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = 'setup.py'

